css/styles.css
body {
    font-family: "Roboto", sans-serif;
    color: #434455;
    background-color: #fff;
}

ul, ol {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

a {
    text-decoration: none; 
}

h1, h2, h3, h4, h5, h6, p {
    margin: 0;
}

img {
    display: block;
    max-width: 100%;
    height: auto;
}

.container {
   max-width: 1158px; 
   padding: 0 15px; 
   margin: 0 auto;
}

.section {
    padding: 120px 0;
}

/*header*/
.page-header {
  border-bottom: 1px solid #e7e9fc  
   
}

.header-container {
    display: flex;
    align-items: center;
}

.header-nav {
    display: flex;
    align-items: center;
}

.header-menu {
display: flex;
align-items: center;
gap: 40px;
}

.address-list {
display: flex;
align-items: center;
gap: 40px;
}
    
    
.logo {
font-family: "Raleway", sans-serif;
    font-weight: 700;
    font-size: 18px;
    line-height: 1.17;
    letter-spacing: 0.03em;
    text-transform: uppercase;
    color: #4d5ae5;
}

.header-logo {
    padding: 24px 0;
    margin-right: 76px;
}

.header-logo .logo-part {
    color: #2e2f42;
}

.footer-logo .logo-part {
    color: #f4f4fd;
}

.header-link {
    display: block;
    padding: 24px 0;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: #2e2f42;
}

.header-link:hover,
.header-link:focus {
        color: #404bbf;
} 

.header-address {
   font-style: normal;
   margin-left: auto;
}

.address-link {
    display: block;
    padding: 24px 0;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: #434455;
}

.address-link:hover,
.address-link:focus {
    color: #404bbf;
}

.header-address {
    font-style: normal;
    display: flex;
}

/*hero*/
.hero-section {
    background: #2e2f42;
    padding: 188px 0;
}

.hero-title {
    max-width: 496px;
    margin: 0 auto 48px;
    font-weight: 700;
    font-size: 56px;
    line-height: 1.07;
    letter-spacing: 0.02em;
    text-align: center;
    color: #fff;
}

button {
    display: block;
    margin: 0 auto;
}

.hero-button { 
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.04em;
 color: #fff;
 box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 background: #4d5ae5;
 cursor: pointer; 
 padding: 16px 32px;
 border-radius: 4px;
 border: none;
}

.hero-button:hover, 
.hero-button:focus {
background: #404bbf;
}

/*features*/

.visually-hidden {
position: absolute;
width: 1px;
height: 1px;
margin: -1px;
border: 0;
padding: 0;
white-space: nowrap;
clip-path: inset(100%);
clip: rect(0 0 0 0);
overflow: hidden;
}

.features-list {
display: flex;
gap: 24px;
}

.feature-item {
font-weight: 500;
font-size: 20px;
line-height: 1.2;
letter-spacing: 0.02em;
color: #2e2f42;
}

.list-item-features {
width: calc((100% - 72px) / 4);
} 

.feature-description { 
        font-size: 16px;
        line-height: 1.5;
        letter-spacing: 0.02em;
        color: #434455;
}

/*team*/
.team-header {
        margin-bottom: 72px;
        font-weight: 700;
        font-size: 36px;
        line-height: 1.11;
        letter-spacing: 0.02em;
        text-align: center;
        color: #2e2f42;
}

.team-list {
        display: flex;
        flex-wrap: wrap;
        gap: 48px 24px;
}

.list-team-item{
    border-radius: 0 0 4px 4px;
        padding-block: 0px 32px;
        padding-inline: 0px;
        width: 264px;
        height: 380px;
        box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
        background: #fff;
}

.team-item-name {
        font-weight: 500;
        font-size: 20px;
        line-height: 1.2;
        letter-spacing: 0.02em;
        text-align: center;
        color: #2e2f42;
        margin-bottom: 8px; ;
}

.team-item-description {
        font-size: 16px;
        line-height: 1.5;
        letter-spacing: 0.02em;
        text-align: center;
        color: #434455;   
}

.card-content { 
    padding: 32px 16px;
}

.team-section {
 background: #f4f4fd;
}

.portfolio-section-header {
        font-weight: 700;
        font-size: 36px;
        line-height: 1.11;
        letter-spacing: 0.02em;
        text-align: center;
        color: #2e2f42;
        margin-bottom: 72px;
}

.portfolio-list {
    display: flex;
    flex-wrap: wrap;
    gap: 48px 24px;
}
 
.portfolio-card-content {
    border-bottom: 1px solid #e7e9fc;
        border-left: 1px solid #e7e9fc;
        border-right: 1px solid #e7e9fc;
        padding-block: 32px;
        padding-inline: 16px;
        width: 360px;
        height: 120px;
}

.portfolio-item-title {
        font-weight: 500;
        font-size: 20px;
        line-height: 1.2;
        letter-spacing: 0.02em;
        color: #2e2f42;
}

.portfolio-item-description {
        font-size: 16px;
        line-height: 1.5;
        letter-spacing: 0.02em;
        color: #434455;
}

.footer {
    background: #2e2f42;
    padding: 100px 0;
}

.footer-logo{
    display: inline-block;
    margin-bottom: 16px;
}

.footer-text {
    max-width: 264px;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: #f4f4fd;
}

